# Gomoku

./: 1  Read.md
nc库版/: GomokuGame  Makefile  check_win.c  common.h  main.c
src/: main.c
纯c版/: 1.c  GomokuGame  Makefile
纯c版/src/: aux_function.c  common.h
联网版/client/: Makefile
联网版/client/src/: client.c
联网版/db/: makefile
联网版/db/db/: user.db
联网版/db/src/: database.c  test.c  user.c
联网版/include/: client.h  common_structs.h  data.h  log.h  network.h  thread.h
联网版/log/: log.c
联网版/utils/: CMakeLists.txt
联网版/utils/src/: network.c  test_network.c
